Pequena correção na parte responsiva

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                 <h3 class="card-title" style="color: #db6a46;">A EMPRESA</h3>
             </div>
             <div class="row pb-5">                
-                <div class="col-6">                                                                                                       
+                <div class="col">                                                                                                       
                     <img src="img/pexels-photo-288477.png" alt="">                      
                 </div>
-                <div class="col-6">
+                <div class="col">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tempor purus molestie,
                         iaculis odio et, consectetur eros. Cras dapibus, ante vel sollicitudin porttitor, velit
